<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--           <ImageButton-->
<!--               android:id="@+id/buttonDrawerToggle"-->
<!--               android:layout_width="wrap_content"-->
<!--               android:layout_height="wrap_content"-->
<!--               android:background="@android:color/transparent"-->
<!--               android:src="@drawable/nav_menu_imgbtn">-->

<!--           </ImageButton>-->

<!--        </androidx.appcompat.widget.Toolbar>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/ll1"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:background="@drawable/demo">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="BEU ENGINEER'S">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="Bihar Engineering University, Patna">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_below="@id/ll1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/topcollegelist"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#2D2D2D"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/topcollege">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_college"
                            android:gravity="center"
                            android:textSize="10sp"
                            android:textColor="@color/white">
                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/placement"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#2D2D2D"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/placement">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placement"
                            android:gravity="center"
                            android:textSize="10sp"
                            android:textColor="@color/white">
                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">


                <androidx.cardview.widget.CardView
                    android:id="@+id/syllabus"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#2D2D2D"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/syllabus">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/syllabus"
                            android:gravity="center"
                            android:textSize="10sp"
                            android:textColor="@color/white">
                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/pyq"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#2D2D2D"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/question">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_paper"
                            android:gravity="center"
                            android:textSize="10sp"
                            android:textColor="@color/white">
                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/notescv"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#2D2D2D"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/notes">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notes"
                            android:gravity="center"
                            android:textSize="10sp"
                            android:textColor="@color/white">
                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/applications"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#2D2D2D"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:background="@drawable/formula">
                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Application"
                            android:gravity="center"
                            android:textSize="10sp"
                            android:textColor="@color/white">
                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>





            </LinearLayout>











        </LinearLayout>



    </RelativeLayout>



</ScrollView>